# pyweek-sept-2024

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  nuitka-crash-report.xml  pyproject.toml
assets/: level-1-map.tmx  level-10-map.tmx  level-2-map.tmx  level-3-map.tmx  level-4-map.tmx  level-5-map.tmx  level-6-map.tmx  level-7-map.tmx  level-8-map.tmx  level-9-map.tmx  level-test-map.tmx  roguelike-base.tsx  roguelike-interior.tsx  shadow_shader.glsl
assets/currency/: coin-gold.tsx  coin-ruby.tsx  coin-silver.tsx  gem-blue.tsx  gem-gray.tsx  gem-green.tsx  gem-red.tsx  gem-yellow.tsx  purple-gem.tsx  round-gem-gradient.tsx  round-gem-purple.tsx
assets/enemies/: archer.tx  archmage.tx  cavalier.tx  crossbow.tx  halberd.tx  horse.tx  king.tx  mage.tx  prince.tx  shield.tx  spear.tx  sword.tx
saves/settings/: saved_settings.json
src/: __init__.py  __main__.py  assets.py  constants.py  main.py  menus.py  tileset.py  window.py
src/components/sprites/: enemy.py  player.py  shadow_sprite.py
src/components/utils/: bars.py  enemy.py  player.py  projectiles.py
src/gui/: styles.py  utils.py
src/gui/views/: __init__.py  main_menu.py  options_menu.py  pause_menu.py
src/shadow_of_doubt/: assets.py  constants.py  menus.py  window.py
src/shadow_of_doubt/components/sprites/: player.py
src/shadow_of_doubt/gui/: styles.py  utils.py
src/shadow_of_doubt/gui/views/: __init__.py  main_menu.py  options_menu.py  pause_menu.py
