[tool.poetry]
name = "pyweek-sept-2024"
version = "0.1.0"
description = ""
authors = ["Abhishek Kashyap <abhik5567@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arcade = "3.0.0.dev35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
